提交日期测试

--- a/app/controllers/index/views/other.html
+++ b/app/controllers/index/views/other.html
@@ -10,6 +10,11 @@
 {% endblock %}
 {% block content %}
 <div class="item">
+    <select>
+        <option>11</option>
+        <option>22</option>
+        <option>33</option>
+    </select>
     {% if info != null && info.length > 0 %}
     <table class="table table-hover">
         <caption>市值</caption>
