--- a/app/controllers/index/views/zhidao.html
+++ b/app/controllers/index/views/zhidao.html
@@ -7,9 +7,15 @@
 {% block javascript%}
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="./js/date.js"></script>
 {% endblock %}
 {% block content %}
 <div class="item">
+    早知道:<select>
+        <option>11</option>
+        <option>22</option>
+        <option>33</option>
+    </select>
     {% if planInfo != null && planInfo.length > 0 %}
     <table class="table table-hover">
         <caption>早知道</caption>
@@ -22,9 +28,8 @@
                         <li>{{plan.title}}</li>
                         <li>{{plan.abstract}}</li>
                         <li><span><a href="{{plan.link}}"></a>{{plan.source}}</span></li>
-                        <li>{{plan.posted_at}}</li>
+                        <li id="d">{{plan.posted_at}}</li>
                     </a>
-
                 </ul>
             </td>
         </tr>
@@ -45,103 +50,50 @@
 
 {% block js %}
 <script type="text/javascript">
-/*$(document).ready(function(){
-  var $list = $('div.refresher-list');
-  $list.refresher({
-    onScrollStart:function(){
-      console.log("start");
-    },
-    onScroll:function(){
-      console.log("scrolling");
-    },
-    onScrollEnd:function(){
-      console.log("end");
-    },
-    pullDownActionHandler: function(){
-      for (i=0; i<3; i++) {
-        $list.prepend([
-          '<div class="border-bottom refresher-item white-bg">',
-            '<div class="item item-avatar m15">',
-              '<img src="images/img-useravatar-02.jpg"/>',
-              '<h2>',
-                '<span class="name-avatar">李禅</span>',
-                '<span class="item-note"><i class="icon-message"></i></span>',
-              '</h2>',
-              '<div class="mutual-comment" style="display:none;">',
-                '<button class="button button-clear button-comment">',
-                  '<i class="icon-praise mr-5"></i>点赞',
-                '</button>',
-                '<button class="button button-clear button-comment" data-toggle="commentinput" data-url="/bbs/card/review"  data-btntxt="评论" data-placeholder="评论...">',
-                  '<i class="icon-review mr-5"></i>评论',
-                '</button>',
-              '</div>',
-              '<p class="comment-time" onclick="javascript:void(0);"><i class="icon-clock mr-5"></i>3小时前</p>',
-              '<p class="comment-txt">下拉刷新-', new Date().getTime() ,'</p>',
-              '<p class="comment-location pt-5"><i class="icon-location mr-5"></i>水西环路</p>',
-            '</div>',
-          '</div>'
-        ].join(''));
-      }
-      this.refresh();
-    },
-    pullUpActionHandler: function(){
-      for (i=0; i<3; i++) {
-        $list.append([
-          '<div class="border-bottom refresher-item">',
-            '<div class="item item-avatar m15">',
-              '<a href="/soso/demo?t=',new Date().getTime(),'">',
-              '<img src="images/img-useravatar-02.jpg"/>',
-              '</a>',
-              '<h2>',
-                '<span class="name-avatar">李禅</span>',
-                '<span class="item-note"><i class="icon-message"></i></span>',
-              '</h2>',
-              '<div class="mutual-comment" style="display:none;">',
-                '<button class="button button-clear button-comment">',
-                  '<i class="icon-praise mr-5"></i>点赞',
-                '</button>',
-                '<button class="button button-clear button-comment" data-toggle="commentinput" data-url="/bbs/card/review"  data-btntxt="评论" data-placeholder="评论...">',
-                  '<i class="icon-review mr-5"></i>评论',
-                '</button>',
-              '</div>',
-              '<p class="comment-time" onclick="javascript:void(0);"><i class="icon-clock mr-5"></i>3小时前</p>',
-              '<p class="comment-txt">上拉加载更多-', new Date().getTime() ,'</p>',
-              '<p class="comment-location pt-5"><i class="icon-location mr-5"></i>水西环路</p>',
-            '</div>',
-          '</div>'
-        ].join(''));
-      }
-      this.refresh();
+    /**
+     * 可用
+     * /
+   /* function add0(m){return m<10?'0'+m:m }
+    function format(shijianchuo)
+    {
+        //shijianchuo是整数，否则要parseInt转换
+        var time = new Date(shijianchuo);
+        var y = time.getFullYear();
+        var m = time.getMonth()+1;
+        var d = time.getDate();
+        var h = time.getHours();
+        var mm = time.getMinutes();
+        var s = time.getSeconds();
+        return y+'-'+add0(m)+'-'+add0(d)+' '+add0(h)+':'+add0(mm)+':'+add0(s);
     }
-  });
+    function getLocalTime(nS) {
+        return new Date(parseInt(nS) * 1000).toLocaleString().replace(/:\d{1,2}$/,' ');
+    }*/
 
-  // var selector = '[data-toggle=\"commentinput\"]';
-  // var $CommentInput = $(selector).commentinput();
 
-  $("body").click(function(e){
-    var $t = $(e.target);
-    if($t.is('.icon-message')){
-      $(".mutual-comment").hide();
-      $t.parent().parent().siblings(".mutual-comment").show();
-    }else{
-      $(".mutual-comment").hide();
+    function getLocalTime(nS) {
+        return new Date(parseInt(nS) * 1000).Format("yyyy-MM-dd hh:mm:ss");
     }
+    Date.prototype.Format = function(fmt) {//author: meizz
+        var o = {
+            "M+" : this.getMonth() + 1, //月份
+            "d+" : this.getDate(), //日
+            "h+" : this.getHours(), //小时
+            "m+" : this.getMinutes(), //分
+            "s+" : this.getSeconds(), //秒
+            "q+" : Math.floor((this.getMonth() + 3) / 3), //季度
+            "S" : this.getMilliseconds() //毫秒
+        };
+        if (/(y+)/.test(fmt))
+            fmt = fmt.replace(RegExp.$1, (this.getFullYear() + "").substr(4 - RegExp.$1.length));
+        for (var k in o)
+            if (new RegExp("(" + k + ")").test(fmt))
+                fmt = fmt.replace(RegExp.$1, (RegExp.$1.length == 1) ? (o[k]) : (("00" + o[k]).substr(("" + o[k]).length)));
+        return fmt;
+    }
+    $(document).ready(function () {
+       console.log(getLocalTime(1522559418));
+    });
 
-    // if($t.is('[data-toggle=\"commentinput\"]')){
-    //   if($t.data('readonly') === true){
-    //   }else{
-    //     $CommentInput.setTarget(e.target);
-    //     $CommentInput.show();
-    //   }
-    // }else{
-    //   if(!$t.is('[data-toggle=\"commentinput\"]')
-    //     && !$t.is('div.elab-commentinput')
-    //     && $t.parents('div.elab-commentinput').length <1
-    //     && $CommentInput.isVisible){
-    //     $CommentInput.hide();
-    //   }
-    // }
-  });
-});*/
 </script>
 {% endblock %}
