--- a/app/controllers/index/views/zhidao.html
+++ b/app/controllers/index/views/zhidao.html
@@ -12,13 +12,15 @@
 {% block content %}
 <div class="item">
     早知道:<select>
-        <option>11</option>
-        <option>22</option>
-        <option>33</option>
+    <option value ="volvo">交易公告</option>
+    <option value ="saab">交易所推特</option>
+    <option value="opel">大V推特</option>
+    <option value="audi">币聊</option>
+    <option value="audi">教程</option>
+</select>
     </select>
     {% if planInfo != null && planInfo.length > 0 %}
     <table class="table table-hover">
-        <caption>早知道</caption>
         <tbody>
         {% for plan in planInfo%}
         <tr>
