--- a/app/controllers/index/views/other.html
+++ b/app/controllers/index/views/other.html
@@ -5,8 +5,10 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 {% endblock %}
 {% block javascript%}
+<script type="text/javascript" src="./js/md5/md5.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
 {% endblock %}
 {% block content %}
 <div class="item">
@@ -46,7 +48,7 @@
                 <div class="m-green">{{data.percent_change_utc0}}%</div>
             </td>
             <td class="text-right">{{(data.volume_24h /100000000).toFixed(2)}}亿{{data.anchor}}</td>
-            <td class="blank-td"></td>
+            <td class="blank-td"><button id="skip">k线</button></td>
         </tr>
         {% endfor %}
 
@@ -124,6 +126,21 @@
             "ajax" : true
         });*/
     });
+   function timest() {
+       var tmp = Date.parse( new Date() ).toString();
+       tmp = tmp.substr(0,10);
+       return tmp;
+   }
+   var timestamp = timest();
+   var code = hex_md5('thalesky_eos_'+timestamp);
+   $("#skip").on("click",function(){
+       elab.util.redirect('/index/kline?timestamp='+timestamp+'&code='+code);
+   });
 
+    $(document).ready(function(){
+
+
+
+    })
 </script>
 {% endblock %}
